# autocomplete_search_engine

./: .gitignore  README.md  docker-compose.yml
cpp_engine/: CMakeLists.txt
cpp_engine/data/: dataset.txt
cpp_engine/include/config/: Env.h
cpp_engine/include/db/: DictionaryEntry.h  DictionaryRepository.h  IDBConnection.h  IDBExecutor.h  IDictionaryRepository.h  MySQLConnection.h  MySQLExecutor.h
cpp_engine/include/search/: Autocomplete.h  Recency_cache.h  Trie.h
cpp_engine/src/: Autocomplete.cpp  Benchmark.cpp  Trie.cpp  main.cpp
cpp_engine/src/config/: Env.cpp
mysql/: init.sql
